changes to open call adding procedures

--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@ Para usar el metro es necesario adquirir una tarjeta de transporte, de venta en 
                    <li><a href="#">19 de Noviembre 2018</a>: Inicia registro de asistentes.</li>
                    <li><a href="#">16-18 de Enero 2019</a>: Días centrales de la conferencia.</li>
                  </ul></p>
-               <h3>PAPERS/ARTÍCULOS (2-10 páginas)</h3>
-               <p>Son bienvenidas las propuestas tanto de artículos largos como cortos o posters, presentaciones acompañadas 
+               <h3>PAPER/ARTÍCULO (2-10 páginas)</h3>
+               <p class="iclc-small">Son bienvenidas las propuestas tanto de artículos largos como cortos o posters, presentaciones acompañadas 
                  de una demo o proyectos realizados durante una investigación de doctorado. Para proponer un artículo para 
                  la conferencia, enviar un borrador completo del artículo, un resumen condensado (100-150 palabras) y una 
                  breve Biografía (100-150 palabras para cada contribuyente) a través del sistema de revisión por par doble 
@@ -217,14 +217,32 @@ Para usar el metro es necesario adquirir una tarjeta de transporte, de venta en 
                  referencien trabajos anteriores publicados en esta y otras conferencias, así como la aplicación de métodos 
                  de investigación apropiados. Las actas de la conferencia serán publicadas con ISBN, y un número DOI por cada 
                  artículo.</p>
-               <h3>PERFORMANCES</h3>
-               <p></p>
-               <h3>SESIONES DE ALGORAVE</h3>
-               <p></p>
-               <h3>TALLERES</h3>
-               <p></p>
-               <h3>INSTALACIONES</h3>
-               <p></p>
+               <h3>PERFORMANCE</h3>
+               <p class="iclc-small">Para proponer un performance, envíe una descripción detallada (máximo 2 hojas), un enlace estable a un 
+                 solo ejemplo en vídeo, un breve resumen o nota de programa (100-150 palabras), una breve biografía (100-150 
+                 palabras de cada colaborador) y una descripción de los requisitos técnicos necesarios para desarrollar 
+                 la propuesta al sistema de revisión por par doble ciego en línea. Al escribir la descripción de su 
+                 performance utilice como guía las plantillas oficiales proporcionadas a continuación: 
+                 template-performance-ICLC2019.doc</p>
+               <h3>SESIÓN DE ALGORAVE</h3>
+               <p class="iclc-small">Para proponer una sesión audiovisual para un Algorave, envíe un enlace estable a un solo ejemplo en 
+                 vídeo, una breve biografía (100-150 palabras de cada colaborador) y una descripción de los requisitos 
+                 técnicos necesarios para desarrollar la propuesta al sistema de revisión por par doble ciego en línea. 
+                 Para describir su propuesta de sesión utilice como guía las plantillas oficiales proporcionadas a 
+                 continuación: template-algorave-ICLC2019.doc</p>
+               <h3>TALLER</h3>
+               <p class="iclc-small">Toda propuesta de desarrollo de un taller durante el ICLC 2019 es bienvenida. Para proponer un taller, 
+                 envíe una descripción detallada (máximo 2 hojas), una breve biografía (100-150 palabras para cada contribuyente) 
+                 y una descripción de los requisitos técnicos necesarios para desarrollar la propuesta al sistema de revisión 
+                 por par doble ciego en línea. Al escribir la descripción de su taller utilice como como guía las plantillas 
+                 oficiales proporcionadas a continuación: template-workshop-ICLC2019.doc</p>
+               <h3>INSTALACIÓN</h3>
+               <p class="iclc-small">Las propuestas de presentación de instalaciones son bienvenidas en el ICLC 2019. Para proponer una instalación, 
+                 envíe una descripción detallada (máximo 2 hojas), una breve biografía (100-150 palabras para cada contribuyente) y 
+                 los requisitos necesarios para la presentación de la propuesta, así como una descripción detallada de las necesidades
+                 de transporte, puesta en marcha y mantenimiento requeridos para poder valorar la viabilidad por parte de Medialab 
+                 Prado. Al escribir la descripción de su propuesta de instalación utilice como como guía las plantillas oficiales 
+                 proporcionadas a continuación: template-installation-ICLC2019.doc</p>
           </div>
         </div>
       </div>
