--- a/index.html
+++ b/index.html
@@ -213,7 +213,8 @@ Para usar el metro es necesario adquirir una tarjeta de transporte, de venta en 
                  breve Biografía (100-150 palabras para cada contribuyente) a través del sistema de revisión por par doble 
                  ciego en línea. Al escribir su artículo, utilice como guía, las plantillas oficiales proporcionadas a 
                  continuación: 
-                 <>templates-iclc2019.zip Todas las propuestas de artículos deberán contar con citas que 
+                 <a href="templates/templates-iclc2019.zip">templates-iclc2019.zip</a>.<br /> 
+                 Todas las propuestas de artículos deberán contar con citas que 
                  referencien trabajos anteriores publicados en esta y otras conferencias, así como la aplicación de métodos 
                  de investigación apropiados. Las actas de la conferencia serán publicadas con ISBN, y un número DOI por cada 
                  artículo.</p>
@@ -223,26 +224,29 @@ Para usar el metro es necesario adquirir una tarjeta de transporte, de venta en 
                  palabras de cada colaborador) y una descripción de los requisitos técnicos necesarios para desarrollar 
                  la propuesta al sistema de revisión por par doble ciego en línea. Al escribir la descripción de su 
                  performance utilice como guía las plantillas oficiales proporcionadas a continuación: 
-                 template-performance-ICLC2019.doc</p>
+                 <a href="templates/template-performance.doc">template-performance.doc</a>.</p>
                <h3>SESIÓN DE ALGORAVE</h3>
                <p class="iclc-small">Para proponer una sesión audiovisual para un Algorave, envíe un enlace estable a un solo ejemplo en 
                  vídeo, una breve biografía (100-150 palabras de cada colaborador) y una descripción de los requisitos 
                  técnicos necesarios para desarrollar la propuesta al sistema de revisión por par doble ciego en línea. 
                  Para describir su propuesta de sesión utilice como guía las plantillas oficiales proporcionadas a 
-                 continuación: template-algorave-ICLC2019.doc</p>
+                 continuación: 
+                 <a href="templates/template-algorave.doc">template-algorave.doc</a>.</p>
                <h3>TALLER</h3>
                <p class="iclc-small">Toda propuesta de desarrollo de un taller durante el ICLC 2019 es bienvenida. Para proponer un taller, 
                  envíe una descripción detallada (máximo 2 hojas), una breve biografía (100-150 palabras para cada contribuyente) 
                  y una descripción de los requisitos técnicos necesarios para desarrollar la propuesta al sistema de revisión 
                  por par doble ciego en línea. Al escribir la descripción de su taller utilice como como guía las plantillas 
-                 oficiales proporcionadas a continuación: template-workshop-ICLC2019.doc</p>
+                 oficiales proporcionadas a continuación: 
+                 <a href="templates/template-workshop.doc">template-workshop.doc</a>.</p>
                <h3>INSTALACIÓN</h3>
                <p class="iclc-small">Las propuestas de presentación de instalaciones son bienvenidas en el ICLC 2019. Para proponer una instalación, 
                  envíe una descripción detallada (máximo 2 hojas), una breve biografía (100-150 palabras para cada contribuyente) y 
                  los requisitos necesarios para la presentación de la propuesta, así como una descripción detallada de las necesidades
                  de transporte, puesta en marcha y mantenimiento requeridos para poder valorar la viabilidad por parte de Medialab 
                  Prado. Al escribir la descripción de su propuesta de instalación utilice como como guía las plantillas oficiales 
-                 proporcionadas a continuación: template-installation-ICLC2019.doc</p>
+                 proporcionadas a continuación: 
+                 <a href="templates/template-installation.doc">template-installation.doc</a>.</p>
           </div>
         </div>
       </div>
