--- a/index.html
+++ b/index.html
@@ -169,20 +169,20 @@ Para usar el metro es necesario adquirir una tarjeta de transporte, de venta en 
                lista de temas propuestos </a> en las páginas web de las ediciones anteriores. En esta ocasión, nos gustaría poner especial énfasis en
                aquellas propuestas que trabajen sobre:
                <ul>
-               <li>la cultura libre, como por ejemplo: 
+               <li><a href="#">la cultura libre</a>, como por ejemplo: 
                  <i>software y hardware libre y abierto</i>; 
                  <i>estética y filosofía diy/hacker en el live coding</i>; 
                  <i>live coding más allá de los ordenadores</i>; o
                  <i>perspectivas históricas de los lenguajes de programación para live coding</i>.
                </li> 
-               <li>la enseñanza/aprendizaje del live coding, como por ejemplo:
+               <li><a href="#">la enseñanza/aprendizaje del live coding</a>, como por ejemplo:
                  <i>diversidad en las comunidades de live coding</i>; 
                  <i>live coding, inclusión y equidad</i>; 
                  <i>live coding espacios públicos y privados</i>;
                  <i>aprender y enseñar live coding</i>; o
                  <i>live coding en comunidades autogestionadas</i>.
                </li> 
-               <li>la creación colaborativa en red, como por ejemplo: 
+               <li><a href="#">la creación colaborativa en red</a>, como por ejemplo: 
                  <i>creación colaborativa a través del live coding</i>; 
                  <i>web/networked live coding</i>; 
                  <i>live coding, movimiento y gestualidad</i>;
