typo error corrections

--- a/ingles.html
+++ b/ingles.html
@@ -171,14 +171,14 @@
                <li><a href="#">free culture</a>, for example: 
                  <i>free and open source software and hardware</i>; 
                  <i>diy/hacker aesthetics and philosophy in live coding</i>; 
-                 <i>live coding beyond computers</i>; o
+                 <i>live coding beyond computers</i>; or
                  <i>historical perspectives of live programming languages</i>.
                </li> 
                <li><a href="#">teaching and learning live coding inside communities</a>, for example:
-                 <i>diversity in the live coding communities</i>; 
+                 <i>diversity in live coding communities</i>; 
                  <i>inclusion/equality and live coding</i>; 
                  <i>live coding in public and private spaces</i>;
-                 <i>teaching and learning to live code</i>; o
+                 <i>teaching and learning to live code</i>; or
                  <i>live coding and self organised communities</i>.
                </li> 
                <li><a href="#">collaborative or networked creation</a>, for example: 
@@ -186,7 +186,7 @@
                  <i>web/networked live code</i>; 
                  <i>live coding and movements or gestures</i>;
                  <i>live coding and autonomous agents</i>;
-                 <i>live coding on computer games</i>; o
+                 <i>live coding on computer games</i>; or
                  <i>virtual reality or augmented reality</i>.
                </ul> 
                Contributions that
