adding link to easychair

--- a/index.html
+++ b/index.html
@@ -247,6 +247,8 @@ Para usar el metro es necesario adquirir una tarjeta de transporte, de venta en 
                  Prado. Al escribir la descripción de su propuesta de instalación utilice como como guía las plantillas oficiales 
                  proporcionadas a continuación: 
                  <a href="templates/template-installation.doc">template-installation.doc</a>.</p>
+          <p>Todas las propuestas para la ICLC 2019 se gestionarán a través de
+            <a href="https://easychair.org/conferences/?conf=iclc2019" target="_blank" >EasyChair</a>.</p>
           </div>
         </div>
       </div>
