--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <body id="page-top">
 
-    <!-- Navigation -->
+    <!-- Navigation 
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">ICLC #4</a>
@@ -59,9 +59,9 @@
           </ul>
         </div>
       </div>
-    </nav>
+    </nav> -->
 
-    <!-- Intro Header -->
+    <!-- Intro Header 
     <header class="masthead">
       <div class="intro-body">
         <div class="container">
@@ -76,7 +76,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <!-- imagen efectos -->
       <div style="width: 100%;">
         <img class="img_effect fade-in" src="img/1211-nl-serreria-044.jpg">
